argocd/infrastructure/istio/gateway/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: whispr-prod
spec:
  selector:
    istio: ingressgateway # --> CRD will configure all pods Gateway which have this label, so this pod will be configured
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - whispr.epitech-msc2026.me
        - www.whispr.epitech-msc2026.me
        #- api.whispr.epitech-msc2026.me
      tls:
        httpsRedirect: true

    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - whispr.epitech-msc2026.me
        - www.whispr.epitech-msc2026.me
        #- api.whispr.epitech-msc2026.me
      tls:
        mode: SIMPLE
        credentialName: istio-gateway-tls
        minProtocolVersion: TLSV1_2
